# pdf-knowledgebase

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
specs/: rate_limiting_implementation_plan.md
specs/001-datasheet-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-datasheet-ingestion-pipeline/checklists/: requirements.md
specs/001-datasheet-ingestion-pipeline/contracts/: chromadb-metadata-schema.md  cli-interface.md
src/cli/: ingest.py
src/evaluation/: README.md  check_dynamic_params.py  datasheet_qa.csv  evaluate_rag.py  experiments.csv  quick_test.py
src/ingestion/: chroma_client.py  chunker.py  markdown_parser.py  pipeline.py
src/models/: __init__.py  chunk.py  datasheet.py  status.py
src/utils/: logger.py  validators.py
tests/fixtures/sample_datasheets/LM358/: LM358.md
tests/fixtures/sample_datasheets/TL072/: TL072.md
tests/integration/: test_ingest_refactor.py  test_pipeline_image_filtering.py
